<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.elzatom.potholefinder.AddReportActivity">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_style"
            android:text="@string/user_id"
            android:id="@+id/id" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:id="@+id/editText" />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_style"
        android:text="@string/text_description"
        android:id="@+id/description" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:ems="10"
        android:maxLength="300"
        android:id="@+id/editText2"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/text_style"
        android:text="@string/photo_details"
        android:id="@+id/textView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/no_preview"
        android:id="@+id/imageView" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="@color/buttonTextColor"
                android:background="@color/buttonColor"
                android:onClick="addPhoto"
                android:text="@string/add_image"
                android:id="@+id/button3" />



    <TextView
        android:id="@+id/textVolleyError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#FF4444"
        android:visibility="gone"/>

    <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->


        <!--android:id="@+id/imageView1" />-->
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="cancel"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textColor="@color/buttonTextColor"
        android:background="@color/buttonColor"
        android:text="@string/cancel"
        android:id="@+id/button4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:onClick="submit"
        android:text="@string/submit"
        android:textColor="@color/buttonTextColor"
        android:background="@color/buttonColor"
        android:id="@+id/button5"
      />
    </LinearLayout>
</LinearLayout>
