<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.elzatom.potholefinder.MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:id="@+id/imageView3" />
    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        style="@style/text_style"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <Button

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="addReport"
        android:text="@string/add_report"
        android:textColor="@color/buttonTextColor"
        android:background="@color/buttonColor"
        android:id="@+id/button"
        android:layout_gravity="bottom" />



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showReports"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@color/buttonColor"
            android:textColor="@color/buttonTextColor"
            android:text="@string/show_report"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>


</LinearLayout>
